packages/miz-js/src/miz-manager.css
#container {
	min-width: 360px;
  height: 100%;
}

.explorer {
	display: flex;
  flex-wrap: nowrap;
	min-height: 600px;
  height: 80%;
  width: 100%;
}

#separator {
	width: 1rem;
	cursor: ew-resize;
  background-color:  #4f6c89;
}

#separator2 {
	width: 1rem;
	cursor: ew-resize;
  background-color:  #4f6c89;
}

#save-editor {
  float: right;
  background-color: #23313f;
  color: #89bed7;
  border: 1px solid #89bed7;
  width: 4rem;
  height: 1.5rem;
  border-radius: 10px;
  display: none;
}
#image-edit {
  float: right;
  background-color: #23313f;
  color: #89bed7;
  border: 1px solid #89bed7;
  width: 10rem;
  height: 1.5rem;
  border-radius: 10px;
}

#save-editor:hover {
  background-color: #4f6c89;
  color: #fefefe;
}
#save-editor:active {
  background-color: #89bed7;
  color: #fefefe;
}

#image-preview {
  position: relative;
  left: 0;
  width: 100%;
  /* height: 50%; */
  display: none;
}

#audio-preview {
  position: relative;
  left: 0;
  width: 100%;
  height: 50%;
  display: none;
}

#html-preview {
  width: 100%;
  height: 100%;
  border: none;
}

.directories, .files {
	position: relative;
	background-color: white;
	font-family: 'Droid Sans Mono', courier;
	/* max-width: calc(20% - 1rem); */
	min-width: 200px;
	border: #4f6c89 1px solid;
}

details>details {
	margin-left: 1.5rem;
}

.dir-label, .file-label {
  color: #999;
	padding: 0px 3px;
	border-radius: 1px;
	white-space: nowrap;
	overflow: hidden;
	cursor: pointer;
}

.dir-label:not([contenteditable=true]), .file-label:not([contenteditable=true]) {
	text-overflow: ellipsis;
}

.selected>summary .dir-label, .selected>.file-label {
	color: white;
	background-color: #4f6c89;
}

summary {
	border-width: 1px;
	border-color: transparent;
	border-style: dashed;
	cursor: pointer;
}

.drag-over>summary {
	border-color: black;
}

.dir-label[contenteditable=true], .file-label[contenteditable=true] {
	background-color: #ddd;
	cursor: auto;
}

.selected>summary .dir-label[contenteditable=true], .selected>.file-label[contenteditable=true] {
	color: inherit;
	background-color: transparent;
}

.dir-summary {
	outline: 0px;
}

.dir-summary-empty {
	display: inline-block;
	margin-left: 16px;
	width: calc(100% - 16px);
}


.listing:empty::after {
	font-family: sans-serif;
  font-size: 10px;
	color: #bbb;
	content: "Drag and drop uncompressed files here";
	display: block;
	width: calc(100% - 5px);
	text-align: center;
	position: absolute;
	top: 101%;
}

.directories.empty::after {
	font-family: sans-serif;
  font-size: 10px;
	color: #bbb;
	content: "Drag and drop .miz file";
	display: block;
	width: calc(100% - 5px);
	text-align: center;
	position: absolute;
	top: 101%;
}

.bottom-buttons {
	position: relative;
	height: 90px;
}

.progress-export-zip {
	height: 8px;
	width: 100%;
	position: absolute;
	opacity: 1;
	top: 0px;
	left: 0px;
	border-width: 0;
}

.tree, .listing, .previews {
	padding: 5px;
	height: calc(100% - 10px);
	margin: 0;
  min-width: 200px;
  /* flex: 1; */
  /* flex-grow: 1; */
  overflow-x: hidden;
}
.previews {
  flex: 1;
	height: 100%;
  padding: 0;
}
.tree {
  background-color: #23313f;
}
.listing>li {
	display: flex;
	list-style-type: none;
}

.directories .dir-summary-content {
	display: inline-flex;
	max-width: calc(100% - 16px);
}

.description {
  font-size: 1em;
  text-align: left;
  margin-top: -1rem;
}

.button {
	cursor: pointer;
	opacity: 0;
  display: none;
	margin-left: 7px;
	width: 0px;
	background-size: contain;
	transition: opacity .1s ease-in;
  color: #111
}

.selected>summary .button, .selected>.button {
	min-width: 16px;
	opacity: .65;
  display: block;
}

/* .selected>summary:hover .button, .selected:hover>.button {
	opacity: 1;
} */

.selected>summary .button:hover, .selected>.button:hover {
	opacity: 1;
}

@media (max-width: 680px) {
	.explorer {
		flex-direction: column;
		min-height: calc(100vh - 230px);
	}
	.files, .directories {
		max-width: 100%;
		max-height: 50%;
		max-width: inherit !important;
	}
	#separator {
		pointer-events: none;
		width: 100%;
		height: 8px;
	}
}

.drag-over>summary {
  border-color: whitesmoke;
}
.directories, .files, .previews {
  background-color: #23313f;
}
.selected>summary .button, .selected>.button {
  /* filter: invert(); */
  color: #89bed7;
}

